Adicionando dependência e propriedades para acesso a S3

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,7 @@
 spring.servlet.multipart.max-file-size=400MB
 spring.servlet.multipart.max-request-size=400MB
+
+app.s3.region=us-west-2
+app.s3.accessKey=AKIAISIH4NLWEGGZY45Q
+app.s3.secretKey=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
+app.s3.bucketName=r3-video-storage
