--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,6 @@ app.s3.region=us-west-2
 app.s3.accessKey=AKIAISIH4NLWEGGZY45Q
 app.s3.secretKey=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
 app.s3.bucketName=r3-video-storage
+
+app.dir-original-videos=originals
+app.dir-converted-videos=converted
