--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,11 @@
 spring.servlet.multipart.max-file-size=400MB
 spring.servlet.multipart.max-request-size=400MB
 
+## Chaves e bucket não exibidos por questão de segurança
 app.s3.region=us-west-2
-app.s3.accessKey=AKIAISIH4NLWEGGZY45Q
-app.s3.secretKey=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
-app.s3.bucketName=r3-video-storage
+app.s3.accessKey=#####
+app.s3.secretKey=#####
+app.s3.bucketName=#####
 
 app.dir-original-videos=originals
 app.dir-converted-videos=converted
