Implementando serviço responsável por lidar com  a api de encoding

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,6 @@
 spring.servlet.multipart.max-file-size=400MB
 spring.servlet.multipart.max-request-size=400MB
 
-## Chaves e bucket não exibidos por questão de segurança
 app.s3.region=us-west-2
 app.s3.accessKey=#####
 app.s3.secretKey=#####
@@ -9,3 +8,8 @@ app.s3.bucketName=#####
 
 app.dir-original-videos=originals
 app.dir-converted-videos=converted
+
+app.zencoder.api.url.createJob=https://app.zencoder.com/api/v2/jobs
+app.zencoder.apiKey=#####
+app.zencoder.credentials=#####
+app.zencoder.job.notificationEmail=#####
