Modificando player para ser exibido assim que o processamento de conversão é finalizado

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,6 +10,8 @@ app.dir-original-videos=originals
 app.dir-converted-videos=converted
 
 app.zencoder.api.url.createJob=https://app.zencoder.com/api/v2/jobs
+app.zencoder.api.url.outputProgress=https://app.zencoder.com/api/v2/outputs/{id}/progress
+app.zencoder.api.url.outputDetail=https://app.zencoder.com/api/v2/outputs/{id}
 app.zencoder.apiKey=#####
 app.zencoder.credentials=#####
 app.zencoder.job.notificationEmail=#####
