--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.servlet.multipart.max-file-size=400MB
 spring.servlet.multipart.max-request-size=400MB
+server.error.whitelabel.enabled=false
 
 app.s3.region=us-west-2
 app.s3.accessKey=#####
